# django-eventtools

./: .gitignore  DEVELOPMENT.md  MODERNIZATION_PLAN.md  Makefile  STATUS.md  mypy.ini  pyproject.toml  setup.py  tox.ini
eventtools/: models.py
tests/: models.py  tests.py
