[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-eventtools"
version = "2.0.0"
description = "Recurring event tools for django"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD License"}
authors = [
    {name = "Greg Brown", email = "greg@gregbrown.co.nz"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
]
dependencies = [
    "Django>=3.2",
    "python-dateutil>=2.8.2",
]

[project.urls]
Homepage = "https://github.com/gregplaysguitar/django-eventtools"
Repository = "https://github.com/gregplaysguitar/django-eventtools"
Issues = "https://github.com/gregplaysguitar/django-eventtools/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-django>=4.5.0",
    "pytz",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "django-stubs>=4.2.0",
    "types-python-dateutil>=2.8.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-django>=4.5.0",
    "pytz",
]

[tool.hatch.build.targets.wheel]
packages = ["eventtools"]

[tool.hatch.build.targets.sdist]
include = [
    "/eventtools",
    "/tests",
    "/README.md",
    "/LICENSE.txt",
    "/mypy.ini",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.test_settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["tests"]
addopts = "--tb=short --strict-markers"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # do not perform function calls in argument defaults
    "B904", # Allow raising exceptions without from e
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = "dateutil.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.django-stubs]
django_settings_module = "tests.test_settings"
